# bpo-sales-ops-agent

./: .dockerignore  .env.example  .gitignore  DASHBOARD_REQUIREMENTS.md  README.md  cloudbuild.yaml  pyproject.toml  railway.toml
config/: bpo_registry.json
gmail_poller/: poller.py
infra/: Dockerfile  docker-compose.yml
modules/: __init__.py  _base.py
modules/attio_sync/: __init__.py  attio_client.py  module.py
modules/bpo_sheet_sync/: __init__.py  syncer.py
modules/brand_extractor/: __init__.py  client.py  module.py
modules/classifier/: __init__.py  module.py  prompts.py
modules/cx_intel/: __init__.py  module.py  pdf_generator.py  scraper.py  xlsx_generator.py
modules/deck_generator/: __init__.py  module.py  templates.py
modules/deep_research/: __init__.py  module.py  prompts.py
modules/demo_generator/: __init__.py  module.py
modules/drive_manager/: __init__.py  module.py
modules/email_composer/: __init__.py  module.py
modules/openai_research/: __init__.py  module.py
modules/pipeline_tracker/: __init__.py  module.py
modules/report_templates/: __init__.py  base.html  cx_intel.html  deep_research.html  renderer.py  stakeholder_intel.html  (+1 more)
orchestrator/: config.py  dag.py  deliverable_tracker.py  main.py  registry.py  session.py
setup/: google_oauth.py
shared/: anthropic_client.py  errors.py  google_auth.py  storage.py  types.py
tests/: conftest.py  mocks.py  test_api.py  test_attio_sync.py  test_bpo_sheet_sync.py  test_classifier.py  test_dag.py  test_e2e.py  test_gmail_poller.py  test_modules.py  test_session_persistence.py
(+16 files in other folders)
