[project]
name = "bpo-sales-ops"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "python-pptx>=1.0.0",
    "python-docx>=1.0.0",
    "python-slugify>=8.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["orchestrator*", "modules*", "shared*", "gmail_poller*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
